updated README.md, added tf code.

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 
 # Whitelist Files
 !.gitignore
-!README.md
-
-# Whitelist Directories
-!/terraform/**
+!/README.md
+!/LICENSE
+!terraform/
+!terraform/**/
